--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vkd-kart",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "firebase": "^7.5.0",
     "node-sass": "^4.13.0",
@@ -15,6 +14,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.0.0"
   },
